--- a/admin/login.html
+++ b/admin/login.html
@@ -1,95 +1,130 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Connexion Admin — BenjiShop</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-
-<style>
-  body{
-    background:#02030a;
-    color:white;
-    font-family:Inter, sans-serif;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    height:100vh;
-  }
-  .box{
-    width:320px;
-    background:#050814;
-    padding:20px;
-    border-radius:12px;
-    border:1px solid rgba(255,255,255,0.15);
-    box-shadow:0 0 20px rgba(0,245,255,0.2);
-  }
-  h1{
-    font-size:22px;
-    margin-bottom:18px;
-    text-align:center;
-  }
-  input{
-    width:100%;
-    margin-bottom:12px;
-    padding:10px;
-    border:1px solid rgba(255,255,255,0.25);
-    border-radius:8px;
-    background:#0b0f1e;
-    color:white;
-  }
-  button{
-    width:100%;
-    padding:10px;
-    border:0;
-    border-radius:8px;
-    background:#00f5ff;
-    color:black;
-    font-weight:700;
-    cursor:pointer;
-    box-shadow:0 0 12px rgba(0,245,255,0.6);
-  }
-  #status{
-    margin-top:10px;
-    font-size:13px;
-    color:#ff4d6d;
-    text-align:center;
-    min-height:16px;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Connexion admin — BenjiShop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
+      background:#050712;
+      color:#eef2ff;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      min-height:100vh;
+    }
+    .card{
+      background:#0b1020;
+      border-radius:16px;
+      padding:24px 22px;
+      box-shadow:0 18px 40px rgba(0,0,0,.75);
+      border:1px solid rgba(0,245,255,.2);
+      width:100%;
+      max-width:360px;
+    }
+    h1{
+      margin:0 0 12px;
+      font-size:20px;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+    }
+    label{
+      font-size:13px;
+      display:block;
+      margin-bottom:6px;
+      color:#cbd5ff;
+    }
+    input{
+      width:100%;
+      padding:9px 11px;
+      border-radius:10px;
+      border:1px solid #262c4a;
+      background:#050713;
+      color:#eef2ff;
+      font-size:14px;
+      outline:none;
+    }
+    input:focus{
+      border-color:#00f5ff;
+      box-shadow:0 0 0 1px rgba(0,245,255,.5);
+    }
+    button{
+      margin-top:16px;
+      width:100%;
+      border-radius:999px;
+      border:0;
+      padding:10px;
+      font-weight:600;
+      background:linear-gradient(135deg,#00f5ff,#00aaff);
+      color:#02030a;
+      cursor:pointer;
+      box-shadow:0 0 18px rgba(0,245,255,.6);
+    }
+    button:disabled{
+      opacity:.6;
+      cursor:wait;
+    }
+    .error{
+      margin-top:10px;
+      font-size:13px;
+      color:#ff6b6b;
+    }
+  </style>
 </head>
 <body>
+  <div class="card">
+    <h1>BENJISHOP</h1>
+    <p style="font-size:13px;color:#9aa6c0;margin-bottom:18px">
+      Accès réservé. Entre le mot de passe admin pour ouvrir le panel BrainRot.
+    </p>
+    <form id="loginForm">
+      <label for="pwd">Mot de passe</label>
+      <input id="pwd" type="password" autocomplete="current-password" required>
+      <button id="btn" type="submit">Se connecter</button>
+      <div id="error" class="error"></div>
+    </form>
+  </div>
 
-<div class="box">
-  <h1>Connexion Admin</h1>
+  <script>
+    // Si déjà loggé → redirige vers le panel
+    if (localStorage.getItem("admin_token") === "ok") {
+      window.location.href = "/admin/";
+    }
 
-  <input id="password" type="password" placeholder="Mot de passe admin">
-  <button onclick="login()">Se connecter</button>
-  <div id="status"></div>
-</div>
+    const form = document.getElementById("loginForm");
+    const pwdInput = document.getElementById("pwd");
+    const btn = document.getElementById("btn");
+    const errorEl = document.getElementById("error");
 
-<script>
-async function login(){
-  const pass = document.getElementById('password').value.trim();
-  if(!pass){
-    document.getElementById("status").textContent = "Mot de passe requis.";
-    return;
-  }
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      errorEl.textContent = "";
+      btn.disabled = true;
 
-  const res = await fetch("/.netlify/functions/auth", {
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({ password: pass })
-  });
+      try {
+        const res = await fetch("/.netlify/functions/auth", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ password: pwdInput.value })
+        });
 
-  const data = await res.json();
-  if(data.ok){
-    localStorage.setItem("admin_token", "ok");
-    window.location.href = "/admin/";
-  } else {
-    document.getElementById("status").textContent = "Mot de passe incorrect.";
-  }
-}
-</script>
+        const data = await res.json().catch(() => ({}));
 
+        if (res.ok && data.ok) {
+          localStorage.setItem("admin_token", "ok");
+          window.location.href = "/admin/";
+        } else {
+          errorEl.textContent = "Mot de passe incorrect.";
+        }
+      } catch (err) {
+        console.error(err);
+        errorEl.textContent = "Erreur serveur, réessaie.";
+      } finally {
+        btn.disabled = false;
+      }
+    });
+  </script>
 </body>
 </html>
