--- a/admin/login.html
+++ b/admin/login.html
@@ -1,130 +1,22 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Connexion admin — BenjiShop</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body{
-      margin:0;
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
-      background:#050712;
-      color:#eef2ff;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      min-height:100vh;
-    }
-    .card{
-      background:#0b1020;
-      border-radius:16px;
-      padding:24px 22px;
-      box-shadow:0 18px 40px rgba(0,0,0,.75);
-      border:1px solid rgba(0,245,255,.2);
-      width:100%;
-      max-width:360px;
-    }
-    h1{
-      margin:0 0 12px;
-      font-size:20px;
-      letter-spacing:.08em;
-      text-transform:uppercase;
-    }
-    label{
-      font-size:13px;
-      display:block;
-      margin-bottom:6px;
-      color:#cbd5ff;
-    }
-    input{
-      width:100%;
-      padding:9px 11px;
-      border-radius:10px;
-      border:1px solid #262c4a;
-      background:#050713;
-      color:#eef2ff;
-      font-size:14px;
-      outline:none;
-    }
-    input:focus{
-      border-color:#00f5ff;
-      box-shadow:0 0 0 1px rgba(0,245,255,.5);
-    }
-    button{
-      margin-top:16px;
-      width:100%;
-      border-radius:999px;
-      border:0;
-      padding:10px;
-      font-weight:600;
-      background:linear-gradient(135deg,#00f5ff,#00aaff);
-      color:#02030a;
-      cursor:pointer;
-      box-shadow:0 0 18px rgba(0,245,255,.6);
-    }
-    button:disabled{
-      opacity:.6;
-      cursor:wait;
-    }
-    .error{
-      margin-top:10px;
-      font-size:13px;
-      color:#ff6b6b;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>BENJISHOP</h1>
-    <p style="font-size:13px;color:#9aa6c0;margin-bottom:18px">
-      Accès réservé. Entre le mot de passe admin pour ouvrir le panel BrainRot.
-    </p>
-    <form id="loginForm">
-      <label for="pwd">Mot de passe</label>
-      <input id="pwd" type="password" autocomplete="current-password" required>
-      <button id="btn" type="submit">Se connecter</button>
-      <div id="error" class="error"></div>
-    </form>
-  </div>
+<input id="pwd" type="password" placeholder="Mot de passe admin">
+<button onclick="login()">Connexion</button>
 
-  <script>
-    // Déjà connecté ? -> redirection directe
-    if (localStorage.getItem("admin_token") === "ok") {
-      window.location.href = "/admin/";
-    }
+<script>
+async function login() {
+  const pwd = document.getElementById("pwd").value;
 
-    const form = document.getElementById("loginForm");
-    const pwdInput = document.getElementById("pwd");
-    const btn = document.getElementById("btn");
-    const errorEl = document.getElementById("error");
+  const res = await fetch("/.netlify/functions/auth", {
+    method: "POST",
+    body: JSON.stringify({ password: pwd })
+  });
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      errorEl.textContent = "";
-      btn.disabled = true;
+  const data = await res.json();
 
-      try {
-        const res = await fetch("/.netlify/functions/auth", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ password: pwdInput.value })
-        });
-
-        const data = await res.json().catch(() => ({}));
-
-        if (res.ok && data.ok) {
-          localStorage.setItem("admin_token", "ok");
-          window.location.href = "/admin/";
-        } else {
-          errorEl.textContent = "Mot de passe incorrect.";
-        }
-      } catch (err) {
-        console.error(err);
-        errorEl.textContent = "Erreur serveur, réessaie.";
-      } finally {
-        btn.disabled = false;
-      }
-    });
-  </script>
-</body>
-</html>
+  if (data.ok) {
+    localStorage.setItem("admin", "1");
+    location.href = "/admin/index.html";
+  } else {
+    alert("Mot de passe incorrect");
+  }
+}
+</script>
